--- a/front/index.html
+++ b/front/index.html
@@ -10,8 +10,53 @@
 </head>
 
 <body onload="obterFilmes()">
-    <div class="container mt-5">
 
+    <div class="modal fade" id="modalCadastro"
+        aria-labelledby="modalCadastro" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h1 class="modal-title fs-5">Cadastro de Usuário</h1>
+                </div>
+                <div class="modal-body">
+
+                </div>
+                <div class="modal-footer">
+
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="container">
+        <div class="row justify-content-center">
+            <div class="col-md-8">
+                <nav class="navbar navbar-expand-md bg-light">
+                    <a href="#" class="navbar-brand">Filmes</a>
+                    <button class="navbar-toggler"
+                    type="button"
+                    data-bs-toggle="collapse"
+                    data-bs-target="#myNav"
+                    aria-controls="#myNav"
+                    aria-expanded="false"
+                    aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="myNav">
+                        <div class="navbar-nav ms-auto">
+                            <a class="nav-link active me-2"
+                            aria-current="page" href="#">Login</a>
+                            <a class="nav-link active me-2"
+                            data-bs-toggle="modal"
+                            data-bs-target="#modalCadastro"
+                            href="#">Novo Usuário</a>
+                        </div>
+                    </div>
+                </nav>
+            </div>
+        </div>
+    </div>
+    <div class="container mt-5">
         <div class="row justify-content-center">
             <div class="col-md-8">
                 <div class="alert d-none alert-danger alert-dismissible fade" role="alert">Preencha todos os campos!
